--- a/assets/theme-styles/prepros-6.config
+++ b/assets/theme-styles/prepros-6.config
@@ -250,6 +250,7 @@
     "uploadOnChange": false,
     "ftp": {
       "secure": false,
+      "keepAlive": true,
       "host": "",
       "port": 21,
       "user": "",
