--- a/assets/theme-styles/prepros-6.config
+++ b/assets/theme-styles/prepros-6.config
@@ -16,12 +16,12 @@
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/orange.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     },
     {
-      "path": "skins/rosy.less",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/rosy.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
-    },
-    {
       "path": "skins/purple.less",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/purple.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "skins/rosy.less",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/rosy.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
@@ -42,11 +42,69 @@
   },
   "imports": [
     {
+      "path": "_init.less",
+      "imports": [
+        "sections/_init_sections.less",
+        "featured-components/_init_featured.less",
+        "blog-layouts/_init_blog_layouts.less",
+        "sections/404.less",
+        "sections/universal.less",
+        "sections/header.less",
+        "sections/jumbosearch.less",
+        "sections/social-icons.less",
+        "sections/navigation.less",
+        "sections/single.less",
+        "sections/sidebar.less",
+        "sections/pagination.less",
+        "sections/comments.less",
+        "sections/footer.less",
+        "featured-components/slider.less",
+        "featured-components/featured-area1.less",
+        "featured-components/featured-area2.less",
+        "featured-components/page_contactus.less",
+        "blog-layouts/grid-layouts.less",
+        "blog-layouts/revive-layout.less"
+      ]
+    },
+    {
+      "path": "blog-layouts/_init_blog_layouts.less",
+      "imports": [
+        "blog-layouts/grid-layouts.less",
+        "blog-layouts/revive-layout.less"
+      ]
+    },
+    {
+      "path": "featured-components/_init_featured.less",
+      "imports": [
+        "featured-components/slider.less",
+        "featured-components/featured-area1.less",
+        "featured-components/featured-area2.less",
+        "featured-components/page_contactus.less"
+      ]
+    },
+    {
+      "path": "sections/_init_sections.less",
+      "imports": [
+        "sections/404.less",
+        "sections/universal.less",
+        "sections/header.less",
+        "sections/jumbosearch.less",
+        "sections/social-icons.less",
+        "sections/navigation.less",
+        "sections/single.less",
+        "sections/sidebar.less",
+        "sections/pagination.less",
+        "sections/comments.less",
+        "sections/footer.less"
+      ]
+    },
+    {
       "path": "skins/default.less",
       "imports": [
         "variables.less",
         "functions.less",
         "_init.less",
+        "woocommerce.less",
         "sections/_init_sections.less",
         "featured-components/_init_featured.less",
         "blog-layouts/_init_blog_layouts.less",
@@ -75,6 +133,7 @@
         "variables.less",
         "functions.less",
         "_init.less",
+        "woocommerce.less",
         "sections/_init_sections.less",
         "featured-components/_init_featured.less",
         "blog-layouts/_init_blog_layouts.less",
@@ -103,6 +162,7 @@
         "variables.less",
         "functions.less",
         "_init.less",
+        "woocommerce.less",
         "sections/_init_sections.less",
         "featured-components/_init_featured.less",
         "blog-layouts/_init_blog_layouts.less",
@@ -131,6 +191,7 @@
         "variables.less",
         "functions.less",
         "_init.less",
+        "woocommerce.less",
         "sections/_init_sections.less",
         "featured-components/_init_featured.less",
         "blog-layouts/_init_blog_layouts.less",
@@ -159,6 +220,7 @@
         "variables.less",
         "functions.less",
         "_init.less",
+        "woocommerce.less",
         "sections/_init_sections.less",
         "featured-components/_init_featured.less",
         "blog-layouts/_init_blog_layouts.less",
